# docs/auth/swagger.json
@@ -41,6 +41,12 @@
                         "schema": {
                             "$ref": "#/definitions/models.UserWithToken"
                         }
+                    },
+                    "400": {
+                        "description": "Provided password is wrong",
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 }
             }
@@ -75,6 +81,18 @@
                         "schema": {
                             "$ref": "#/definitions/models.UserWithToken"
                         }
+                    },
+                    "400": {
+                        "description": "Provided password doesn't match requirements",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "409": {
+                        "description": "User with such username already exists",
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 }
             }
@@ -83,6 +101,10 @@
     "definitions": {
         "http.AuthRequest": {
             "type": "object",
+            "required": [
+                "password",
+                "username"
+            ],
             "properties": {
                 "password": {
                     "type": "string"
